--- a/YOMAN/index.html
+++ b/YOMAN/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Start loading assets right away, to have them (partly) loaded already when they are requested -->
-  <link rel="preload" href="Build//9b0798b814f9ae4dadde67745016d8b5.data.gz" as="fetch" type="application/octet-stream" crossorigin>
-  <link rel="preload" href="Build/4e7d97ccf2c3c3cf7819bf0a776eae56.framework.js.gz" as="script">
-  <link rel="preload" href="Build/ac64e63a02ecf58b757a5df97ae1d469.wasm.gz" as="fetch" type="application/wasm" crossorigin>
-  <title>YAO_SlotMachine</title>
+  <link rel="preload" href="Build//6eb7eeb2e7806d340e0990a412bc4d6c.data.unityweb" as="fetch" type="application/octet-stream" crossorigin>
+  <link rel="preload" href="Build/4e7d97ccf2c3c3cf7819bf0a776eae56.framework.js.unityweb" as="script">
+  <link rel="preload" href="Build/ac64e63a02ecf58b757a5df97ae1d469.wasm.unityweb" as="fetch" type="application/wasm" crossorigin>
+  <title>SlotMachine_YOMAN</title>
   <style>
     * {
       padding: 0;
@@ -103,22 +103,22 @@
     <canvas id="unity-canvas"></canvas>
   </div>
   <div id="unity-loading-container">
-    <img src="logo.svg" class="logo" alt="Logo Ecapsule">
+    <img src="logo.svg" class="logo" alt="Logo Bamma">
     <div id="unity-loading-bar">
       <div id="unity-loading-bar-inner"></div>
     </div>
   </div>
-  <script src="Build/fce8772d1c4411460211aff55474fe8d.loader.js"></script>
+  <script src="Build/5b72a7666edf021e07484a710ed8513d.loader.js"></script>
   <script>
     var buildUrl = "Build";
-    var loaderUrl = buildUrl + "/fce8772d1c4411460211aff55474fe8d.loader.js";
+    var loaderUrl = buildUrl + "/5b72a7666edf021e07484a710ed8513d.loader.js";
     var config = {
-      dataUrl: buildUrl + "/9b0798b814f9ae4dadde67745016d8b5.data.gz",
-      frameworkUrl: buildUrl + "/4e7d97ccf2c3c3cf7819bf0a776eae56.framework.js.gz",
-      codeUrl: buildUrl + "/ac64e63a02ecf58b757a5df97ae1d469.wasm.gz",
+      dataUrl: buildUrl + "/6eb7eeb2e7806d340e0990a412bc4d6c.data.unityweb",
+      frameworkUrl: buildUrl + "/4e7d97ccf2c3c3cf7819bf0a776eae56.framework.js.unityweb",
+      codeUrl: buildUrl + "/ac64e63a02ecf58b757a5df97ae1d469.wasm.unityweb",
       streamingAssetsUrl: "StreamingAssets",
-      companyName: "Ecapsule",
-      productName: "YAO_SlotMachine",
+      companyName: "Bamma",
+      productName: "SlotMachine_YOMAN",
       productVersion: "1.0.0",
     };
 
